Add images of matching cats to dynamically routed [id].js referencing acf.cat_pic from catid ACF REST endpoint combined with cat-images $wpdb REST endpoint for url

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -71,3 +71,10 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .catImageContainer {
+    margin-top: 2rem;
+    width: 100%;
+    max-width: 100%;
+    display: block;
+  }
